alignment issue resolve

--- a/packages/mars-theme/src/components/index.css
+++ b/packages/mars-theme/src/components/index.css
@@ -15663,6 +15663,9 @@ select:-webkit-autofill:focus {
   .Globe {
     padding: 100px 0px;
   }
+  .transfer-money .row{
+    align-items: center;
+  }
   @media (max-width: 540px) {
     .Globe {
       padding: 0px 0px 40px 0px;
